# angularDistrib

./: CMakeLists.txt  README.md  plot.py  sim.cc  test.mac
include/: ParticleSpectra.hh  SBG4PSSphereSurfaceFlux.hh  TotalFlux.hh  action.hh  event.hh  fluxInfo.hh  generator.hh  geometry.hh  materials.hh  physics.hh  run.hh  shieldmaterial.hh
src/: ParticleSpectra.cc  SBG4PSSphereSurfaceFlux.cc  TotalFlux.cc  action.cc  event.cc  fluxInfo.cc  generator.cc  geometry.cc  materials.cc  physics.cc  run.cc  shieldmaterial.cc
